force-app/main/default/objects/sugati__Extra_Bundle_Member__c/sugati__Extra_Bundle_Member__c.object-meta.xml
<CustomObject>
    <description>Junction object to support bundling of extras.</description>
    <label>Extra Bundle Member</label>
    <nameField>
        <displayFormat>EBM-{000000}</displayFormat>
        <label>Extra Bundle Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extra Bundle Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>