force-app/main/default/objects/sugati__Extra_Bundle_Member__c/fields/sugati__EBM_Bundle_Extra__c.field-meta.xml
<CustomField>
    <fullName>sugati__EBM_Bundle_Extra__c</fullName>
    <description>Lookup to the (parent) bundle extra</description>
    <inlineHelpText>Lookup to the bundle extra</inlineHelpText>
    <label>Bundle Extra</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Bundle Members</relationshipLabel>
    <relationshipName>Extra_Bundle_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>