force-app/main/default/objects/sugati__Extra_Bundle_Member__c/fields/sugati__EBM_Extra_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__EBM_Extra_Cost_Price__c</fullName>
    <formula>sugati__EBM_Extra_Item__r.sugati__LSEI_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>