force-app/main/default/objects/sugati__Extra_Bundle_Member__c/fields/sugati__EBM_Extra_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__EBM_Extra_Currency__c</fullName>
    <formula>TEXT( sugati__EBM_Extra_Item__r.CurrencyIsoCode )</formula>
    <label>Extra Currency</label>
    <type>Text</type>
</CustomField>