force-app/main/default/objects/sugati__Extra_Bundle_Member__c/fields/sugati__EBM_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__EBM_Extra_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the (child) extra item</description>
    <inlineHelpText>Lookup to the extra item that is a member of this bundle.</inlineHelpText>
    <label>Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Extra Bundle Members (Child Extras)</relationshipLabel>
    <relationshipName>EBM_Child_Extras</relationshipName>
    <type>Lookup</type>
</CustomField>